--- a/bytebank-herdado-conta/.project
+++ b/bytebank-herdado-conta/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bytebank-herdado-conta</name>
+	<name>bytebank-encapsulado-conta</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1688407772577</id>
+			<id>1688407772524</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
